[tool.poetry]
name = "pyky040"
version = "0.1.4"
description = "High-level Python interface for the KY040 rotary encoder"
authors = ["Raphaël Yancey <raphael@badfile.net>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
device = ["evdev"]
